[Cleanup] - Removed unused {{baseurl}} variable

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@ styles, `#sidebar-checkbox` for behavior. -->
   </div>
   
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
+    <a class="sidebar-nav-item" href="/">Home</a>
     <a class="sidebar-nav-item {%if page.url contains '/tech/' %} active{% endif %}" href="/tech/">Tech</a>
     <a class="sidebar-nav-item {%if page.url contains '/travel/' %} active{% endif %}" href="/travel/">Travel</a>
   </nav>
