--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,25 +16,25 @@
     </title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/lanyon.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/custom.css">
+    <link rel="stylesheet" href="/public/css/poole.css">
+    <link rel="stylesheet" href="/public/css/syntax.css">
+    <link rel="stylesheet" href="/public/css/lanyon.css">
+    <link rel="stylesheet" href="/public/css/custom.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:400%7CLato:400">
 
     <!-- Icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.baseurl }}/public/icons/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.baseurl }}/public/icons/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.baseurl }}/public/icons/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/icons/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{ site.baseurl }}/public/icons/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ site.baseurl }}/public/icons/apple-touch-icon-152x152.png" />
-    <link rel="icon" type="image/png" href="{{ site.baseurl }}/public/icons/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="{{ site.baseurl }}/public/icons/favicon-16x16.png" sizes="16x16" />
-    <link rel="shortcut icon" href="{{ site.baseurl }}/public/icons/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/public/icons/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/public/icons/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/public/icons/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/icons/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/public/icons/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/public/icons/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="/public/icons/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/public/icons/favicon-16x16.png" sizes="16x16" />
+    <link rel="shortcut icon" href="/public/icons/favicon.ico">
     <meta name="application-name" content="Vinay Gopinath &middot; Adventures with technology and travel" />
     <meta name="msapplication-TileColor" content="#202020" />
-    <meta name="msapplication-TileImage" content="{{ site.baseurl }}/public/icons/mstile-144x144.png" />
+    <meta name="msapplication-TileImage" content="/public/icons/mstile-144x144.png" />
 
     <!-- RSS -->
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
