--- a/_layouts/category-page.html
+++ b/_layouts/category-page.html
@@ -15,7 +15,7 @@ layout: default
     {% assign content = post.content %}
     <div class="post">
         <h2 class="post-title">
-      <a href="{{ site.baseurl }}{{ post.url }}">
+      <a href="{{ post.url }}">
         {{ post.title }}
       </a>
     </h2>
@@ -36,7 +36,7 @@ layout: default
   {% endif %}
   {% if paginator.previous_page %}
   {% if paginator.page == 2 %}
-  <a class="pagination-item newer" href="{{ site.baseurl }}/{{page.paginate.category}}">Newer</a>
+  <a class="pagination-item newer" href="/{{page.paginate.category}}">Newer</a>
   {% else %}
   <a class="pagination-item newer" href="{{paginator.previous_page_path}}">Newer</a>
   {% endif %}
