--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@ layout: bare
     <div class="masthead">
         <div class="container">
             <h3 class="masthead-title">
-          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+          <a href="/" title="Home">{{ site.title }}</a>
           <small>{{ site.tagline }}</small>
         </h3>
         </div>
