--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,13 +8,28 @@ layout: default
   {{ content }}
 </div>
 
-<div class="related">
+<div id="disqus_thread"></div>
+<script>
+    var disqus_config = function () {
+        this.page.url = '{{site.live_url}}{{page.url}}';
+        this.page.identifier = '{{page.url}}';
+    };
+    (function() {
+        var d = document, s = d.createElement('script');
+        s.src = '//vinaygopinath.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>You don't seem to have Javascript enabled - To participate in the discussion, consider allowing Javascript on this site</noscript>
+
+<!--<div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
     <li>
       <h3>
-        <a href="{{ site.baseurl }}{{ post.url }}">
+        <a href="{{ post.url }}">
           {{ post.title }}
           <small>{{ post.date | date_to_string }}</small>
         </a>
@@ -22,4 +37,4 @@ layout: default
     </li>
     {% endfor %}
   </ul>
-</div>
+</div>-->
