--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -5,6 +5,9 @@
 
 <body>
     {{content}}
+    
+    <link rel="stylesheet" href="/public/styles/site.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:400%7CLato:400">
 </body>
 
 </html>
