[Head] Inlined critical CSS

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,13 +14,13 @@
         {{ page.title }} &middot; {{ site.title }}
         {% endif %}
     </title>
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="/public/css/poole.css">
-    <link rel="stylesheet" href="/public/css/syntax.css">
-    <link rel="stylesheet" href="/public/css/lanyon.css">
-    <link rel="stylesheet" href="/public/css/custom.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:400%7CLato:400">
+    
+    <style type="text/css">
+    {% capture include_to_scssify %}
+      {% include critical.scss %}
+    {% endcapture %}
+    {{ include_to_scssify | scssify }}
+    </style>
 
     <!-- Icons -->
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/public/icons/apple-touch-icon-57x57.png" />
