--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,9 @@
     <!-- Enable responsiveness on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta name="theme-color" content="#202020">
+    
+    <!-- Google search console verification -->
+    <meta name="google-site-verification" content="MWI4oyhfBl0XmM9yIcmO1Z7pk-vRmALsNYJ1FwKX3iQ" />
 
     <title>
         {% if page.title == "Home" %} 
