--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,33 +8,62 @@ layout: default
   {{ content }}
 </div>
 
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [{
+      "@type": "ListItem",
+      "position": 1,
+      "item": {
+        "@id": "{{site.live_url}}",
+        "name": "Home"
+      }
+    },{
+      "@type": "ListItem",
+      "position": 2,
+      "item": {
+        "@id": "{{site.live_url}}/{{page.categories[0]}}",
+        "name": "{{page.categories[0] | capitalize}}"
+      }
+    },{
+      "@type": "ListItem",
+      "position": 3,
+      "item": {
+        "@id": "{{site.live_url}}{{page.url}}",
+        "name": "{{page.title}}"
+      }
+    }]
+  }
+</script>
+
 <div id="disqus_thread"></div>
 <script>
-    var disqus_config = function () {
-        this.page.url = '{{site.live_url}}{{page.url}}';
-        this.page.identifier = '{{page.url}}';
-    };
-    (function() {
-        var d = document, s = d.createElement('script');
-        s.src = '//vinaygopinath.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-    })();
+  var disqus_config = function () {
+    this.page.url = '{{site.live_url}}{{page.url}}';
+    this.page.identifier = '{{page.url}}';
+  };
+  (function() {
+    var d = document, s = d.createElement('script');
+    s.src = '//vinaygopinath.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+  })();
 </script>
 <noscript>You don't seem to have Javascript enabled - To participate in the discussion, consider allowing Javascript on this site</noscript>
 
 <!--<div class="related">
-  <h2>Related Posts</h2>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
-    <li>
-      <h3>
-        <a href="{{ post.url }}">
-          {{ post.title }}
-          <small>{{ post.date | date_to_string }}</small>
-        </a>
-      </h3>
-    </li>
-    {% endfor %}
-  </ul>
+<h2>Related Posts</h2>
+<ul class="related-posts">
+{% for post in site.related_posts limit:3 %}
+<li>
+<h3>
+<a href="{{ post.url }}">
+{{ post.title }}
+<small>{{ post.date | date_to_string }}</small>
+</a>
+</h3>
+</li>
+{% endfor %}
+</ul>
 </div>-->
