--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -5,7 +5,9 @@
 
 .post p {
   text-align: justify;
-  font-size: 0.8rem;
+  font-size: 16px;
+  line-height: 28px;
+  color: #212121;
 }
 
 .home-container {
