[SCSS] Li styling

--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -3,11 +3,16 @@
 @import "partials/poole";
 @import "partials/lanyon";
 
-.post p {
-  text-align: justify;
-  font-size: 16px;
-  line-height: 28px;
+.post {
   color: #212121;
+  p, li {
+    text-align: justify;
+    font-size: 16px;
+    line-height: 28px;
+  }
+  li {
+    margin-bottom: 10px;
+  }
 }
 
 .home-container {
@@ -34,7 +39,7 @@
   height: 30vh;
   transition: all 0.3s ease-in-out;
   // box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16), 0 2px 10px rgba(0, 0, 0, 0.12);
-  
+
   .btn {
     font-family: inherit;
     font-size: 12px;
