--- a/_layouts/category-page.html
+++ b/_layouts/category-page.html
@@ -8,10 +8,10 @@ layout: default
         - Page {{paginator.page}}
       {% endif %}
   </h1>
-  
+
   <div class="posts">
-    {% assign index = true %} 
-    {% for post in paginator.posts %} 
+    {% assign index = true %}
+    {% for post in paginator.posts %}
     {% assign content = post.content %}
     <div class="post">
         <h2 class="post-title">
@@ -23,7 +23,7 @@ layout: default
         <span class="post-date">{{ post.date | date_to_string }}</span> {{ post.excerpt }}
     </div>
     {% unless post == paginator.posts.last %}
-    <hr> 
+    <hr>
     {% endunless %}
     {% endfor %}
 </div>
@@ -36,7 +36,7 @@ layout: default
   {% endif %}
   {% if paginator.previous_page %}
   {% if paginator.page == 2 %}
-  <a class="pagination-item newer" href="/{{page.paginate.category}}">Newer</a>
+  <a class="pagination-item newer" href="/blog/{{page.paginate.category}}">Newer</a>
   {% else %}
   <a class="pagination-item newer" href="{{paginator.previous_page_path}}">Newer</a>
   {% endif %}
