--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -5,10 +5,10 @@
 
 <body>
   {{content}}
-  
+
   <link rel="stylesheet" href="/public/styles/site.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:400%7CLato:400">
-  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400%7CLato:400">
+
   <script>
   window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
   ga('create', 'UA-78016218-1', 'auto');
